--- a/index.html
+++ b/index.html
@@ -153,19 +153,8 @@
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
                     <a href="https://note.com/team_sippo/n/n0a0b23ac056c">
-                    <button class="btn bt㊅n-primary btn-round btn-sm btn-rose">2020.03.25 : note up</button></a><br>
-                    <a href="https://www.youtube.com/watch?v=WrM6UjRXogM" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.25 : youtube up</button></a><br>
-                    <a href="https://www.youtube.com/watch?v=8SuI-7Gmzlk" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.19 : youtube up</button></a><br>
-                    <a href="https://note.com/team_sippo/n/n6ea1fd59f654" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.19 : note up</button></a><br>
-                    <a href="https://note.com/team_sippo/n/n8a9dee83e51c" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.15 : note up</button></a><br>
-                    <a href="https://note.com/team_sippo/n/n1cee4c3db319" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.14 : note up</button></a><br>
-                    <a href="https://note.com/team_sippo/n/n5fed01d0c209" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.11 : note up</button></a><br>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.25 : note up</button></a><br>
+                    <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
         
             </div>
