--- a/news.html
+++ b/news.html
@@ -100,13 +100,10 @@
         <!--archive-->                
         <div class="row">
           <div class="col-lg-12 col-md-12">
-              <div class="col-md-12 col-lg-12 "></div>
-              <div id="navigation-pills">
                 <div class="title">
                   <h3>Archives</h3>
                 </div>
-              </div>
-                <ul class="nav nav-pills nav-pills-icons nav-pills-info justify-content-center" role="tablist">
+                <ul class="nav nav-pills nav-pills-icons nav-pills-info justify-content-center " role="tablist">
                   <!--color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"-->
                   <!--regular meeting>
                   <li class="nav-item">
@@ -359,12 +356,12 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第2回実験デー" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第2回実験デー" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">build</i> 2019.11.02
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第10回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第10回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.10.30
                     </a>
                   </li>
@@ -374,17 +371,17 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第9回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第9回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.10.23
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第8回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第8回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.10.16
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第7回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第7回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.10.09
                     </a>
                   </li>
@@ -394,54 +391,52 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第6回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第6回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.10.02
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第1回実験デー" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第1回実験デー" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">build</i> 2019.09.27
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第5回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第5回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.09.25
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第4回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第4回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.09.18
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第3回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第3回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.09.11
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第2回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第2回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.09.04
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第1回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第1回定例会議" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">schedule</i> 2019.08.27
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第1回会合" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第1回会合" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">face</i> 2019.08.10
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="第0回会合" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link" href="第0回会合" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
                       <i class="material-icons">face</i> 2019.07.27
                     </a>
                   </li>
                 </ul>
-              </div>
             </div>
-          </div>
         </div>
         <!--end archive-->                        
  
