--- a/news.html
+++ b/news.html
@@ -136,12 +136,12 @@
                     </a>
                   </li-->                  
                   <li class="nav-item">
-                    <a class="nav-link active" href="https://www.youtube.com/watch?v=WrM6UjRXogM" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link active" href="https://www.youtube.com/watch?v=WrM6UjRXogM" target="_blank"  rel=”noopener” role="button">
                       <i class="fa fa-play"></i> 2020.03.25
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="https://www.youtube.com/watch?v=8SuI-7Gmzlk" target="_blank"  rel=”noopener” role="tab" data-toggle="tab">
+                    <a class="nav-link active" href="https://www.youtube.com/watch?v=8SuI-7Gmzlk" target="_blank"  rel=”noopener” role="button">
                       <i class="fa fa-play"></i> 2020.03.19
                     </a>
                   </li>
