--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 </p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
-                                <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" class="btn btn-danger">android (ALPHA ver)</a>
+                                <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" class="btn btn-rose">android (ALPHA ver)</a>
                             </div>
     
                         </div>
@@ -216,7 +216,7 @@
                                 <p class="card-description">自転車で行きたい場所を探すためのアプリです。<br>自転車で行ける距離のレストランを検索できて、そこまでの道順を表示できます。</p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
-                                <a href="https://play.google.com/store/apps/details?id=com.laboratory.kna.cyclip&hl=ja" class="btn btn-danger">android</a>
+                                <a href="https://play.google.com/store/apps/details?id=com.laboratory.kna.cyclip&hl=ja" class="btn btn-rose">android</a>
                             </div>
                         </div>
                     </div>
