--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom"
-                        href="#event" data-original-title="定期・不定期開催イベント">Event
+                        href="#activities" data-original-title="定期・不定期開催イベント">Activities
                         </a>                        
                     </li>
                     <li class="nav-item">
@@ -169,14 +169,14 @@
                             効率や便利を追い求めるのではなく、人が現実を密度濃く感じて暮らすことができるような技術、
                             そんな技術を創っていきます。<br><br>
 
-                            空間、自転車、農業、音楽、芸術の分野を混合し、笑顔を生む技術を開発していきます。<br>
-                            Flyable Serviceは想いを具現化する最初の柱です。<br><br>
+                            ー新しい体験を創り、自ら楽しみ、笑顔を創るー<br>
+                            AI, IoTやデザインを駆使して、そんな活動が出来る場になることを目指しています。<br><br>
 
                             「Technologies for your smile-技術であなたを笑顔に-」<br>
                         </h5>
                     </div>
                 </div>
-    
+
                 <h2 class="title" id="products">Products</h2>
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
@@ -341,34 +341,39 @@
             </div>
 
 
-            <h2 class="title" id="event">Event</h2>
+            <h2 class="title" id="activities">Activities</h2>
             <div class="team">
                 <div class="row">
                     <!--TAN2 intoroduction-->
                     <div class="col-md-4">
                         <div class="team-player">
                             <div class="card card-plain">
-                                <h4 class="card-title">定例会議
-                                </h4>
+                                <div class="card-header card-header-rose col-md-7  ml-auto mr-auto">
+                                          <ul class="nav nav-tabs" data-tabs="tabs">
+                                                <i class="material-icons">schedule</i> 定例会議
+                                         </ul>
+                                </div>
                                 <div class="card-body">
                                     <p class="card-description">毎週水曜日20：00～実施中。<br>
                                         各自の専門分野の勉強会、意見交換、今後の活動など。<br>
                                         AI、IoT、IT、自転車、農業、音楽、芸術に関心のある方、起業や新しいことにチャレンジしようとしている方、超分野コミュニケーションしませんか？<br>
                                         ↓興味がある方はポチッ↓
                                 </div>
-                                <div class="card-footer justify-content-center">
+                                    <div class="card-footer justify-content-center">
                                     <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-link btn-just-icon">
                                         <i class="material-icons">mail</i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--BB(Ph.D.)-->
                     <div class="col-md-4">
                         <div class="team-player">
                             <div class="card card-plain">
-                                <h4 class="card-title">実験デー
-                                </h4>
+                                <div class="card-header card-header-rose col-md-7  ml-auto mr-auto">
+                                    <ul class="nav nav-tabs" data-tabs="tabs">
+                                          <i class="material-icons">build</i> 実験デー
+                                   </ul>
+                          </div>                                
                                 <div class="card-body">
                                     <p class="card-description">月1日実施中。<br>
                                         メンバーで集まり、実験や実装を行います。コーヒー・お菓子タイムが多め。時間が許せば飲み会までなだれ込みます。<br>
@@ -382,9 +387,11 @@
                     <div class="col-md-4">
                         <div class="team-player">
                             <div class="card card-plain">
-                                <h4 class="card-title">不定期イベント
-                                    <br>
-                                </h4>
+                                <div class="card-header card-header-rose col-md-7  ml-auto mr-auto">
+                                    <ul class="nav nav-tabs" data-tabs="tabs">
+                                          <i class="material-icons">face</i> イベント
+                                   </ul>
+                                </div>
                                 <div class="card-body">
                                     <p class="card-description">年に1回は何かやりたい！<br>
                                         年はじめに目標設定してそれにむけて準備します。<br>
@@ -393,7 +400,41 @@
                             </div>
                         </div>
                     </div>
-            </div>            
+                </div>
+                <div class="row">
+                    <div class="col-md- ml-auto mr-auto text-center">
+                        <h5 class="description">活動・イベントの記録は↓メディアにて公開中！</h5>
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12">
+                                <ul class="nav nav-pills nav-pills-icons nav-pills-rose justify-content-center " role="tablist">
+                                    <!--color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"-->
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="https://www.youtube.com/user/korokoror" target="_blank"  rel=”noopener” role="button">
+                                          <i class="fa fa-play"></i> youtube
+                                        </a>
+                                      </li>
+                                    <li class="nav-item">
+                                      <a class="nav-link active" href="https://note.com/team_sippo/m/m8700090081c2" target="_blank"  rel=”noopener” role="button">
+                                        <i class="fa fa-sticky-note"></i> note
+                                      </a>
+                                    </li-->
+                                    <li class="nav-item">
+                                      <a class="nav-link active" href="https://github.com/Team-SIPPO?tab=repositories" target="_blank"  rel=”noopener” role="button">
+                                        <i class="fa fa-code"></i>code
+                                      </a>
+                                    </li-->
+                                    <li class="nav-item">
+                                      <a class="nav-link active" href="https://www.instagram.com/team.sippo/" target="_blank"  rel=”noopener” role="button">
+                                        <i class="fa fa-instagram"></i>instagram
+                                      </a>
+                                    </li-->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+        </div>            
 
             <div class="section section-contacts">
                 <div class="row">
@@ -407,7 +448,6 @@
                                 </a>
                             </div>
                         </div>
-                        </form>
                     </div>
                 </div>
             </div>
