--- a/news.html
+++ b/news.html
@@ -396,7 +396,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="第6回定例会議"
+                    <a class="nav-link" href="第6回定例会議">
                       <i class="material-icons">schedule</i> 2019.10.02
                     </a>
                   </li>
