--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <div class="container">
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/n3ab221578aad">
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.04.08 : RegularMeeting</button></a><br>
+                    <a href="https://note.com/team_sippo/n/na9fce22aaf0a">
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.04.12 : Note up</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
         
