--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@
                 <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
                     <ul class="nav nav-tabs" data-tabs="tabs">
-                      <i class="material-icons">schedule</i> 2020.04.15
+                      <i class="material-icons">schedule</i> 2020.04.17
                     </ul>
                     </div>
                 </div>
@@ -136,6 +136,10 @@
                     </a>
                   </li-->                  
                   <li class="nav-item">
+                    <a class="nav-link active" href="https://note.com/team_sippo/n/n8e097a617a75" target="_blank"  rel=”noopener” role="button">
+                      <i class="material-icons">schedule</i> 2020.04.15
+                    </a>
+                  </li>                  <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/na9fce22aaf0a" target="_blank"  rel=”noopener” role="button">
                       <i class="fa fa-sticky-note"></i> 2020.04.12
                     </a>
