--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <div class="container">
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/n07e6dbc1be80" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.04.29 : regular meeting</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n4b4366206b42" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.05.04 : irregular meeting</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
         
