--- a/news.html
+++ b/news.html
@@ -150,12 +150,12 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n20edbda382b9" target="_blank"  rel=”noopener” role="button">
-                      <i class="material-icons">schedule</i> 2020.04.18
+                      <i class="material-icons">build</i> 2020.04.18
                     </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n70fcbec60646" target="_blank"  rel=”noopener” role="button">
-                      <i class="material-icons">schedule</i> 2020.04.17
+                      <i class="material-icons">build</i> 2020.04.17
                     </a>
                   </li>
                   <li class="nav-item">
