--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@
                 <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
                     <ul class="nav nav-tabs" data-tabs="tabs">
-                      <i class="material-icons">schedule</i> 2020.05.20
+                      <i class="material-icons">build</i>  2020.05.30
                     </ul>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="card-body ">
                 <div class="tab-content text-center">
                     <div class="tab-pane active" id="profile">
-                      <iframe class="note-embed" src="https://note.com/embed/notes/n978d84f25b24" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                      <iframe class="note-embed" src="https://note.com/embed/notes/nf6383e0f511e" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                     </div>
                 </div>
                 </div>
@@ -136,6 +136,9 @@
                     </a>
                   </li-->                  
                   <li class="nav-item">
+                    <a class="nav-link active" href="https://note.com/team_sippo/n/n978d84f25b24" target="_blank"  rel=”noopener” role="button">
+                      <i class="material-icons">schedule</i> 2020.05.20
+                    </a>                  <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/ncb1fd5006aee" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.05.13
                     </a>
