--- a/news.html
+++ b/news.html
@@ -136,9 +136,14 @@
                     </a>
                   </li-->                  
                   <li class="nav-item">
+                    <a class="nav-link active" href="https://note.com/team_sippo/n/n4564d5acc4b6" target="_blank"  rel=”noopener” role="button">
+                      <i class="material-icons">schedule</i> 2020.05.27
+                    </a>
+                  <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n978d84f25b24" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.05.20
-                    </a>                  <li class="nav-item">
+                    </a>
+                    <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/ncb1fd5006aee" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.05.13
                     </a>
