--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@
                 <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
                     <ul class="nav nav-tabs" data-tabs="tabs">
-                      <i class="material-icons">schedule</i>  2020.06.04
+                      <i class="fa fa-sticky-note"></i> 2020.06.05
                     </ul>
                     </div>
                 </div>
