--- a/news.html
+++ b/news.html
@@ -136,6 +136,10 @@
                     </a>
                   </li-->                  
                   <li class="nav-item">
+                    <a class="nav-link active" href="https://note.com/hurasu1/n/n639b7cd06aaf" target="_blank"  rel=”noopener” role="button">
+                      <i class="fa fa-sticky-note"></i> 2020.06.09
+                    </a>
+                    <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/ned6dfe16065e" target="_blank"  rel=”noopener” role="button">
                       <i class="fa fa-sticky-note"></i> 2020.06.05
                     </a>
