--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@
                 <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
                     <ul class="nav nav-tabs" data-tabs="tabs">
-                      <i class="fa fa-sticky-note"></i> 2020.06.14
+                      <i class="fa fa-play"></i> 2020.06.17
                     </ul>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="card-body ">
                 <div class="tab-content text-center">
                     <div class="tab-pane active" id="profile">
-                      <iframe class="note-embed" src="https://note.com/embed/notes/n7fb31886246e" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/EEiSfNjh3UU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 </div>
@@ -136,55 +136,76 @@
                     </a>
                   </li-->                  
                   <li class="nav-item">
+                    <a class="nav-link active" href="https://note.com/team_sippo/n/n74fb649d5338" target="_blank"  rel=”noopener” role="button">
+                      <i class="material-icons">schedule</i> 2020.06.17
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="https://note.com/team_sippo/n/n7fb31886246e" target="_blank"  rel=”noopener” role="button">
+                      <i class="fa fa-sticky-note"></i> 2020.06.14
+                    </a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/ncaa19e69a816" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.06.10
                     </a>
-                    <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/hurasu1/n/n639b7cd06aaf" target="_blank"  rel=”noopener” role="button">
                       <i class="fa fa-sticky-note"></i> 2020.06.09
                     </a>
-                    <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/ned6dfe16065e" target="_blank"  rel=”noopener” role="button">
                       <i class="fa fa-sticky-note"></i> 2020.06.05
                     </a>
-                  </li-->
+                  <li>
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n801bb052188d" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.06.03
                     </a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n99b4fd5c6353" target="_blank"  rel=”noopener” role="button">
                       <i class="fa fa-sticky-note"></i> 2020.06.02
                     </a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/nf6383e0f511e" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">build</i> 2020.05.30
                     </a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n4564d5acc4b6" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.05.27
                     </a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n978d84f25b24" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.05.20
                     </a>
-                    <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/ncb1fd5006aee" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.05.13
                     </a>
+                  </li>                    
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n71df21e3a1b6" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.05.06
                     </a>
+                  </li>                    
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n4b4366206b42" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.05.04
                     </a>
+                  </li>                    
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n07e6dbc1be80" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.04.29
                     </a>
-                  <li class="nav-item">
+                  </li>
+                    <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/nfedf9bddbffd" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.04.22
                     </a>
