--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <div class="container">
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://www.youtube.com/watch?v=EEiSfNjh3UU" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.06.17 : youtube up</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n8e64d583436a" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.06.19 : note up</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
         
