--- a/news.html
+++ b/news.html
@@ -79,15 +79,15 @@
                 <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
                     <ul class="nav nav-tabs" data-tabs="tabs">
-                      <i class="fa fa-play"></i> 2020.06.17
+                      <i class="fa fa-sticky-note"></i> 2020.06.19
                     </ul>
                     </div>
                 </div>
                 </div>
-                <div class="card-body ">
+                <div class="card-body "></div>
                 <div class="tab-content text-center">
                     <div class="tab-pane active" id="profile">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/EEiSfNjh3UU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <iframe class="note-embed" src="https://note.com/embed/notes/n8e64d583436a" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                     </div>
                 </div>
                 </div>
@@ -134,7 +134,12 @@
                     <a class="nav-link active" href="" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">face</i> 
                     </a>
-                  </li-->                  
+                  </li-->
+                  <li class="nav-item">
+                    <a class="nav-link active" href="https://www.youtube.com/watch?v=EEiSfNjh3UU" target="_blank"  rel=”noopener” role="button">
+                      <i class="fa fa-play"></i> 2020.06.17
+                    </a>
+                  </li>                  
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n74fb649d5338" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.06.17
