--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <div class="container">
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/n2164bd915b69" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.07.06 : experiments day</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n6a5164305795" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.07.08 : Regular meeting</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
         
